feat: allow for warm-up and steady-state analysis